# audiology-api

./: .gitignore  README.md  app.py  model_config.toml  package.json  pyproject.toml
cdk/: api_stack.py  audiology_api_stack.py  config_utils.py  record_processing.py  submission_api.py  web_socket_api.py  ws_stack.py
config/: config.json
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/auth/signin/: page.tsx
frontend/src/components/: auth-example.tsx  job-config.tsx  session-provider.tsx  socket-stream.tsx
frontend/src/components/providers/: session-provider.tsx
frontend/src/components/ui/: card.tsx
frontend/src/types/: next-auth.d.ts
lambda/api/: handler.py  requirements.txt
lambda/api_authorizer/: handler.py
lambda/authorizer/: handler.py
lambda/bucket_response/: handler.py
lambda/completion_recorder/: handler.py
lambda/layers/audiology_errors/python/audiology_errors/: errors.py  utils.py
lambda/record_processor/: handler.py  requirements.txt
lambda/websocket/: handler.py
lambda/websocket_authorizer/: __init__.py  handler.py  requirements.txt
scripts/: API_KEY_MANAGEMENT.md  clear_jobs.py  connect_websocket.sh  create_user.sh  generate_dummy_input.py  manage_api_keys.py  put_presigned.sh  test_config_upload.sh  test_socket_chain.sh  trigger_api_upload.sh  upload_s3.py
tests/unit/: test_audiology_api_stack.py  test_websocket_basics.py
